# AtlasWorkspace

./: .gitattributes  .gitignore  1111.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  Dockerfile  Implement.md  Makefile  README.md  auditxtras.md  build.cmd  rust-toolchain.toml
AtlasRust/: .gitignore  Cargo.toml
AtlasRust/apps/atlas_workspace_app/: Cargo.toml
AtlasRust/apps/novaforge_editor_app/: Cargo.toml
AtlasRust/apps/novaforge_game_app/: Cargo.toml
AtlasRust/apps/novaforge_server_app/: Cargo.toml
AtlasRust/crates/atlas_animation/: Cargo.toml
AtlasRust/crates/atlas_audio/: Cargo.toml
AtlasRust/crates/atlas_core/: Cargo.toml
AtlasRust/crates/atlas_editor/: Cargo.toml
AtlasRust/crates/atlas_engine/: Cargo.toml
AtlasRust/crates/atlas_input/: Cargo.toml
AtlasRust/crates/atlas_networking/: Cargo.toml
AtlasRust/crates/atlas_physics/: Cargo.toml
AtlasRust/crates/atlas_pipeline/: Cargo.toml
AtlasRust/crates/atlas_renderer/: Cargo.toml
AtlasRust/crates/atlas_ui/: Cargo.toml
AtlasRust/crates/atlas_workspace/: Cargo.toml
AtlasRust/crates/novaforge_editor_adapter/: Cargo.toml
AtlasRust/crates/novaforge_game/: Cargo.toml
AtlasRust/crates/novaforge_patch/: Cargo.toml
AtlasRust/crates/novaforge_voxel/: Cargo.toml
AtlasRust/crates/novaforge_world/: Cargo.toml
NovaForge/: CMakeLists.txt  NovaForge.atlas  vcpkg.json
NovaForge/Config/: PCGPreviewDefaults.json
NovaForge/Config/BuildProfiles/: DebugEditor.json
NovaForge/Config/LaunchProfiles/: ClientDefault.json
NovaForge/Data/Registries/: AssetRegistry.json  BuildTargetRegistry.json  DocumentRegistry.json  LaunchTargetRegistry.json  SchemaRegistry.json
NovaForge/Data/Rules/: CharacterRules.json  EconomyRules.json  ProgressionRules.json
NovaForge/Data/Worlds/: DefaultWorld.json
NovaForge/Schemas/: Asset.schema.json  AssetRegistry.schema.json  AtlasProject.schema.json  BuildProfile.schema.json  BuildTargetRegistry.schema.json  CharacterRules.schema.json  DocumentRegistry.schema.json  EconomyRules.schema.json  LaunchProfile.schema.json  LaunchTargetRegistry.schema.json  PCGPreviewDefaults.schema.json  PCGRegistry.schema.json  PCGRuleSet.schema.json  PIESettings.schema.json  ProgressionRules.schema.json  SchemaRegistry.schema.json  WorkspaceProjectSettings.schema.json  World.schema.json
NovaForge/Source/EditorAdapter/: CMakeLists.txt  README.md
NovaForge/Source/Patch/: CMakeLists.txt
NovaForge/Source/Programs/: CMakeLists.txt
NovaForge/Tests/: CMakeLists.txt
Source/Editor/: CMakeLists.txt
Source/Editor/src/: AnimationEditorTool.cpp  AssetEditorTool.cpp  AtlasAITool.cpp  BuildTool.cpp  DataEditorTool.cpp  Editor.cpp  IDETool.cpp  MaterialEditorTool.cpp  SceneEditorTool.cpp  VisualLogicEditorTool.cpp
Source/Programs/AtlasWorkspace/: CMakeLists.txt  LocalProjectAdapter.h  main.cpp
Source/Workspace/: CMakeLists.txt
Tests/: CMakeLists.txt  catch_main.cpp
Tests/AI/: test_ai.cpp
Tests/Core/: test_core.cpp
Tests/Editor/: test_animation_editor_tool.cpp  test_asset_editor_tool.cpp  test_atlas_ai_tool.cpp  test_build_tool.cpp  test_data_editor_tool.cpp  test_editor.cpp  test_m1c_editor.cpp  test_m2_editor.cpp  test_m3_editor.cpp  test_m4_editor.cpp  test_material_editor_tool.cpp  test_phase69_tool_render_contract.cpp  test_s100_editor.cpp  test_s101_editor.cpp  test_s102_editor.cpp  test_s103_editor.cpp  test_s104_editor.cpp  test_s105_editor.cpp  test_s106_editor.cpp  test_s107_editor.cpp  test_s108_editor.cpp  test_s109_editor.cpp  test_s110_editor.cpp  test_s111_editor.cpp  test_s112_editor.cpp  test_s113_editor.cpp  test_s114_editor.cpp  test_s115_editor.cpp  test_s116_editor.cpp  test_s117_editor.cpp  test_s118_editor.cpp  test_s119_editor.cpp  test_s120_editor.cpp  test_s121_editor.cpp  test_s122_editor.cpp  test_s123_editor.cpp  test_s124_editor.cpp  test_s125_editor.cpp  test_s126_editor.cpp  test_s127_editor.cpp  (+93 more)
Tests/Editor/Legacy/: test_s104_editor.cpp  test_s106_editor.cpp  test_s110_editor.cpp  test_s111_editor.cpp  test_s112_editor.cpp  test_s115_editor.cpp  test_s116_editor.cpp  test_s120_editor.cpp  test_s121_editor.cpp  test_s122_editor.cpp  test_s124_editor.cpp  test_s125_editor.cpp  test_s127_editor.cpp  test_s132_editor.cpp  test_s134_editor.cpp  test_s135_editor.cpp  test_s136_editor.cpp  test_s137_editor.cpp  test_s138_editor.cpp  test_s142_editor.cpp  test_s143_editor.cpp  test_s144_editor.cpp  test_s145_editor.cpp  test_s148_editor.cpp  (+87 more)
Tests/Engine/: test_engine.cpp
Tests/Pipeline/: test_arbiter_reasoner.cpp  test_full_suite.cpp  test_pipeline.cpp  test_tool_wiring.cpp  test_workspace_broker.cpp
Tests/UI/: test_atlasui.cpp  test_m1_editor.cpp  test_phase68_text_input_wiring.cpp  test_phase_d5_d3d11_activation.cpp  test_ui.cpp  test_ui_backends.cpp  test_widgets_v2.cpp  test_workspace_wiring.cpp
Tests/Workspace/: test_phase10_persistence.cpp  test_phase11_command_bus.cpp  test_phase12_event_bus.cpp  test_phase13_preferences.cpp  test_phase14_plugin_system.cpp  test_phase15_diagnostics.cpp  test_phase16_scripting.cpp  test_phase17_search.cpp  test_phase18_undo_redo.cpp  test_phase19_session.cpp  test_phase20_clipboard.cpp  test_phase21_focus.cpp  test_phase22_drag_drop.cpp  test_phase23_hotkeys.cpp  test_phase24_tooltip.cpp  test_phase25_status_bar.cpp  test_phase26_context_menu.cpp  test_phase27_badge.cpp  test_phase28_minimap.cpp  test_phase29_annotation.cpp  test_phase30_filter_index.cpp  test_phase31_theme.cpp  test_phase32_tour.cpp  test_phase33_split_view.cpp  test_phase34_frame_controller.cpp  test_phase35_project_file.cpp  test_phase36_ai_panel.cpp  test_phase37_console_command_bus.cpp  test_phase38_dock_tree_serializer.cpp  test_phase39_content_router.cpp  test_phase40_asset_import_queue.cpp  test_phase41_workspace_layout.cpp  test_phase42_logging_route.cpp  test_phase43_notifications.cpp  test_phase44_notification_system.cpp  test_phase45_undo_redo.cpp  test_phase46_selection_system.cpp  test_phase47_project_manager.cpp  test_phase48_activity_bar.cpp  test_phase49_recent_files.cpp  (+44 more)
(+956 files in other folders)
